// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hides password quality by default 1`] = `
<div>
  <input
    minLength=""
    onChange={[Function]}
    placeholder="Enter your text here"
    required={false}
    type="password"
    value="Uisi38#8iad"
  />
</div>
`;

exports[`hides password quality when enabled but no password is entered 1`] = `
<div>
  <input
    minLength=""
    onChange={[Function]}
    placeholder="Enter your text here"
    required={false}
    type="password"
    value=""
  />
</div>
`;

exports[`shows password quality when enabled and a password is entered 1`] = `
<div>
  <input
    minLength=""
    onChange={[Function]}
    placeholder="Enter your text here"
    required={false}
    type="password"
    value="Uisi38#8iad"
  />
</div>
`;
